	* libc/netdb:  Move netdb functions from lib/net to lib/netdb.  Move
	  the DNS client logic from apps/netutils/dnscient to libc/netdb.
	  Add support to gethostbyname() so that it will attempt a DNS host
	  lookup before consulting the host table (if so enabled) (2015-07-10).
	* arch/arm/src/samdl/chip/saml_usb.h:  Several fixes to register
	  definitions and types. From Janne Rosberg (2015-07-10).
	* include/nuttx/net/ and libc/netdb: Repartitioning of DNS client
	  logic in preparation for IPv6 support (2015-07-12):
	  - Rename include/nuttx/net/dnsclient.h to dns.h
	  - Move internal DNS prototypes from dns.h to libc/netdb/lib_dns.h
	  - Global standard DNS definitions from libc/netdb/dns_soccket.c to
	    dns.h
	  - Eliminate dns_gethostip().  This is now an internal part of
	    gethostbyname()
	  - Eliminate interface dns_whois().  Not needed in this new context.
	* include/nuttx/net/ and libc/netdb: Modifications to DNS client logic
	  and to dns_get/setserver() interfaces to support DNS clients at IPv6
	  addresses (still no support for resolution to IPv6 addresses)
	  (2015-07-12).
	* include/nuttx/net/ and libc/netdb: Implement the low-level network DNS
	  packet protocol to request and receive IPv6 address mappings
	  (2015-07-12).
	* libc/netdb:  Add a default value for DNS server IP address.  Make
	  sure that the IP address has been initialized before permitting DNS
	  queries (2015-07-13).
	* libc/netdb:  Add support for a DNS host name resulution cache.  This
	  can save a lot of DNS name server lookups (but might also have the
	  negative consequence of using stale IP address mappings (2015-07-13).
	* graphics/, libnx/, and include/nuttx/nx:  Implement anti-aliasing in
	  order to clean the drawing of all edges (2015-07-14).
	* drivers/lcd/ and include/nuttx/lcd: Modify the SSD1306 LCD driver to
	  support either the SPI or I2C interface.  From Alan Carvalho de Assis
	  (2015-07-15).